mailnews/imap/src/nsImapMailFolder.cpp
@@ -6834,6 +6834,16 @@ void nsImapMailFolder::SetPendingAttributes(nsIArray *messages, bool aIsMove,
                                             sourceString.get());
       }
 
+      // Carry over HasRe flag.
+      uint32_t flags;
+      uint32_t storeFlags = 0;
+      msgDBHdr->GetFlags(&flags);
+      if (flags & nsMsgMessageFlags::HasRe) {
+        storeFlags = nsMsgMessageFlags::HasRe;
+        mDatabase->SetUint32AttributeOnPendingHdr(msgDBHdr, "flags",
+                                                  storeFlags);
+      }
+
       uint32_t messageSize;
       uint64_t messageOffset;
       nsCString storeToken;
@@ -6849,8 +6859,8 @@ void nsImapMailFolder::SetPendingAttributes(nsIArray *messages, bool aIsMove,
         // here because it can cause missing parts (inline or attachments)
         // when messages are moved or copied manually or by filter action.
         if (aSetOffline)
-          mDatabase->SetUint32AttributeOnPendingHdr(msgDBHdr, "flags",
-                                                    nsMsgMessageFlags::Offline);
+          mDatabase->SetUint32AttributeOnPendingHdr(
+              msgDBHdr, "flags", storeFlags | nsMsgMessageFlags::Offline);
         mDatabase->SetAttributeOnPendingHdr(msgDBHdr, "storeToken",
                                             storeToken.get());
       }
